5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1596_2894.log
== TEST (2019-03-21 18:20:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(unitario*8+45.00*8)
-- ERROR:
File "XXXX", line 8
    total = ?????
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:23:43) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
frete=float(imput(45))

# Calculo do valor a ser pago, incluindo o frete:
total =unitario*frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    frete=float(imput(45))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:25:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
frete=float(imput("valor do frete"))

# Calculo do valor a ser pago, incluindo o frete:
total =unitario*frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    frete=float(imput("valor do frete"))
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:25:53) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
frete=float(input("valor do frete"))

# Calculo do valor a ser pago, incluindo o frete:
total =unitario*frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:14) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
frete=float(input("valor do frete? "))

# Calculo do valor a ser pago, incluindo o frete:
total =unitario*frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    frete=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:30:18) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("quantidade de jogos"))
frete=float(input("valor do frete? "))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos
total_geral=total+frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:30:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("quantidade de jogos? "))
frete=float(input("valor do frete? "))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos
total_geral=total+frete

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:31:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("quantidade de jogos? "))
frete=float(input("valor do frete? "))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete


# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:32:03) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("quantidade de jogos? "))
frete=float(input("valor do frete? "))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete


# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:32:23) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("quantidade de jogos? "))
frete=float(input("valor do frete? "))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete


# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.194321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:33:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("quantidade de jogos? "))
frete=float(input("valor do frete? "))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete


# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:34:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("Quantidade de jogos? "))
frete=float(input("valor do frete? "))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete


# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.209065
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:34:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("Quantidade de jogos? "))
frete=float(input("valor do frete? "))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete


# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:35:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=int(input("Quantidade de jogos? "))
frete=float(input("valor do frete? "))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete


# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.125245
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2894/main.py", line 6, in <module>
    jogos=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:36:34) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=int(input("Quantidade de jogos? "))
frete=float(input("valor do frete? "))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete


# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogos=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:55:46) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=float(input("Qual o valor unitario do jogo? "))
jogos=float(input("Quantidade de jogos? "))
frete=float(input("valor do frete? "))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete


# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    jogos=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:01:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
unitario=f(input("Qual o valor unitario do jogo? "))
jogos=float(input("Quantidade de jogos? "))
frete=float(input("valor do frete? "))

# Calculo do valor a ser pago, incluindo o frete:
total=unitario*jogos+frete


# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    unitario=f(input())
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:26:17) 
-- CODE:
unitario=float(input("valor do jogo? "))
quantidade=8
frete=45.0
total=unitario*quantidade+frete
print(total)
-- EXECUTION TIME:
0.226692
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
